# CriusVis

./: .gitignore  CMakeLists.txt
lib/pugixml/: CMakeLists.txt
src/include/crius/: common.h  mainWindow.h
src/include/crius/common/: hsvColorMapper.h  velocityColorMapper.h
src/include/crius/core/: constantVelocityField.h  fluentVelocityField.h  velocityField.h
src/include/crius/luo/: openglWidget.h  velocityField3D.h
src/include/crius/particle/: particleDistributionVisualizer.h  particleLoader.h  particleRenderer.h
src/include/crius/pathline/: pathlineLoader.h  pathlineRenderer.h  pathlineVisualizer.h
src/include/crius/ui/: closeEventDockWidget.h  colorSelector.h  doubleSlider.h  fluentVelocityFieldVisualizer.h  hsvColorMapper.h  mainWindow.h  resizeEventLabel.h  velocityColorMapper.h  velocityContour.h  velocityMap.h
src/include/crius/utility/: base64ToArray.h  doubleSlider.h
src/include/crius/velocityField/: constantVelocityField.h  fluentVelocityField.h  fluentVelocityFieldVisualizer.h  velocityContour.h
src/include/crius/velocityField/contour/: velocityContour.h  velocityContourCache.h
src/include/crius/velocityField/field3D/: fieldRenderer.h  velocityField3D.h
src/src/: main.cpp  mainWindow.cpp
src/src/common/: hsvColorMapper.cpp
src/src/core/: fluentVelocityField.cpp
src/src/luo/: openglWidget.cpp  velocityField3D.cpp
src/src/particle/: particleDistributionVisualizer.cpp  particleLoader.cpp  particleRenderer.cpp
src/src/pathline/: pathlineLoader.cpp  pathlineRenderer.cpp  pathlineVisualizer.cpp
src/src/ui/: colorSelector.cpp  doubleSlider.cpp  fluentVelocityFieldVisualizer.cpp  hsvColorMapper.cpp  mainWindow.cpp  velocityColorMapper.cpp  velocityContour.cpp  velocityMap.cpp
src/src/utility/: colorSelector.cpp  doubleSlider.cpp
src/src/velocityField/: fluentVelocityField.cpp  fluentVelocityFieldVisualizer.cpp  velocityContour.cpp  velocityContourCache.cpp
src/src/velocityField/contour/: velocityContour.cpp  velocityContourCache.cpp
src/src/velocityField/field3D/: fieldRenderer.cpp  velocityField3D.cpp
