CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CRIUS-VIS)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(GLM_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/glm")

FIND_PACKAGE(VTK REQUIRED CommonCore IOGeometry)

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Widgets)
SET_PROPERTY(GLOBAL PROPERTY AUTOGEN_SOURCE_GROUP auto_gen)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)

FILE(GLOB_RECURSE SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h")

ADD_EXECUTABLE(CriusVis ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src/include" "include" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

TARGET_INCLUDE_DIRECTORIES(CriusVis PUBLIC ${GLM_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(
    CriusVis PUBLIC
    Qt5::Core Qt5::Widgets
    VTK::CommonCore VTK::IOGeometry)
