CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CRIUS-VIS)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

########### vtk

FIND_PACKAGE(VTK REQUIRED CommonCore IOGeometry FiltersGeneral)

########### qt5

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Widgets)
SET_PROPERTY(GLOBAL PROPERTY AUTOGEN_SOURCE_GROUP auto_gen)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)

########### agz-utils

ADD_SUBDIRECTORY(lib/agz-utils)
TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC AGZ_UTILS_SSE)
SET_TARGET_PROPERTIES(AGZUtils PROPERTIES FOLDER "ThirdParty")

########### pugixml

ADD_SUBDIRECTORY(lib/pugixml)
SET_TARGET_PROPERTIES(pugixml PROPERTIES FOLDER "ThirdParty")

########### CriusVis

FILE(GLOB_RECURSE SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h")

ADD_EXECUTABLE(CriusVis ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src/include/crius" "include" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET CriusVis PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET CriusVis PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_INCLUDE_DIRECTORIES(CriusVis PUBLIC "${PROJECT_SOURCE_DIR}/src/include")

TARGET_LINK_LIBRARIES(
    CriusVis PUBLIC
    AGZUtils pugixml
    Qt5::Core Qt5::Widgets
    VTK::CommonCore VTK::IOGeometry VTK::FiltersGeneral)
