CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(PUGIXML)

FILE(GLOB_RECURSE SRC
		"${PROJECT_SOURCE_DIR}/*.hpp"
		"${PROJECT_SOURCE_DIR}/*.cpp")
ADD_LIBRARY(pugixml STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/puguxml" "include" _GRP_PATH "${SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET pugixml PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET pugixml PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_INCLUDE_DIRECTORIES(pugixml PUBLIC "${PROJECT_SOURCE_DIR}/")
